@@ -3,16 +3,16 @@
 			   *** DO NOT EDIT ***
   TO CHANGE ANY INFORMATION IN HERE PLEASE
   EDIT src/misc/writeBuildNum.sh
-  FORMAL BUILD NUMBER:13318
+  FORMAL BUILD NUMBER:13319
 */
 
-#define PRODUCT_VER_STRING "2.0.7.13318"
-#define FILE_VER_STRING "WI-V2.0.7.13318"
-#define LICENSE_VER_STRING "WI-V2.0.7.13318"
-#define FILE_VER_NUMBER 2, 0, 7, 13318
+#define PRODUCT_VER_STRING "2.0.7.13319"
+#define FILE_VER_STRING "WI-V2.0.7.13319"
+#define LICENSE_VER_STRING "WI-V2.0.7.13319"
+#define FILE_VER_NUMBER 2, 0, 7, 13319
 #define FB_MAJOR_VER "2"
 #define FB_MINOR_VER "0"
 #define FB_REV_NO "7"
-#define FB_BUILD_NO "13318"
+#define FB_BUILD_NO "13319"
 #define FB_BUILD_TYPE "V"
 #define FB_BUILD_SUFFIX "Firebird 2.0"
